# ironforge

./: .gitignore  ARCHITECTURE_REFLECTION.md  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  Dockerfile.ocaml  EXPORT_SUMMARY.txt  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_READY.md  GITHUB_SUCCESS.txt  LICENSE  QUICKSTART.md  README.md  REFERENCE.md  START_HERE.md  STATUS.txt  TABLE_OF_CONTENTS.md  TEST_REPORT.md  benchmark.bat  frontend_workflows_plan.md  implementation_plan.md  ocaml_refactor_plan.md  start_server.bat  start_worker.bat  submit_jobs.bat  task.md  test_output.txt
docs/: 00_PLAN_ORIGINAL.md  INDEX.md  final_summary.md  implementation_plan.md  task.md  verification_report.md  walkthrough.md
examples/: advanced_submit.rs  advanced_worker.rs  benchmark.rs  simple_worker.rs  submit_jobs.rs
ironforge-dag/: dune-project
ironforge-dag/bin_server/: dune  server_main.ml
ironforge-dag/lib/: cycle.ml  dag.ml  dune  orchestrator.ml  runner.ml  server.ml  topo.ml
ironforge-dsl/: dune-project
ironforge-dsl/lib/: ast.ml  dune
src/: lib.rs  metrics.rs
src/api/: handlers.rs  routes.rs
src/models/: error.rs  job.rs  mod.rs
src/queue/: mod.rs  redis.rs  streams.rs  traits.rs
src/queue/scripts/: delete_job.lua  enqueue.lua  move_to_dlq.lua  update_progress.lua
src/worker/: executor.rs  handler.rs  mod.rs
tests/: batch_integration.rs  integration.rs
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: animated-counter.tsx  assign-job-modal.tsx  create-job-modal.tsx  glow-card.tsx  grid-background.tsx  (+10 more)
(+5 files in other folders)
