[package]
name = "iron_forge"
version = "0.1.0"
edition = "2021"
authors = ["IronForge Team"]
description = "A high-performance distributed task scheduler written in Rust"
license = "MIT"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
thiserror = "1"
async-trait = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tokio-util = "0.7"

[dev-dependencies]
tokio-test = "0.4"
